fixed balance component styling on mobile

--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -1,7 +1,8 @@
 .containerBalance {
   display: flex;
   flex-wrap: wrap;
-  /* align-items: center; */
+  flex-direction: column;
+  align-items: center;
   justify-content: space-around;
   margin: 0 auto;
   margin-bottom: 40px;
